# value_portfolio

./: .gitignore  README.md  pyproject.toml
data/scripts/: _sharadar.py  fetch_sharadar_daily.py  fetch_sharadar_sep.py  fetch_sharadar_sf1.py  fetch_sharadar_sp500.py  fetch_sharadar_tickers.py  fetch_sp500_benchmark.py  ndl_ingestor.py
data/scripts/full/: _bulk.py  fetch_core_us_bundle.py  fetch_full_daily.py  fetch_full_sep.py  fetch_full_sf1.py  fetch_full_tickers.py
results/: README.md  ledger.jsonl
results/raw/: 2026-06-10_eval_windows_top20_gbt_15fields_and_ppo.txt  2026-06-10_eval_windows_top20_ridge_15fields.txt  2026-06-10_train_and_eval_47features.txt  2026-06-10_train_valuation_15fields_2019.txt  2026-06-10_train_valuation_15fields_2025.txt
results/single_run/: 20260610T212859Z_top20_gbt.json
scripts/: _cli.py  _results.py  _sharadar_inputs.py  ablate_gbt_scaling.py  analyze_holdings_history.py  deflated_sharpe.py  eval_windows.py  inspect_holdings.py  plot_results.py  run_buy_and_hold.py  run_equal_weight.py  run_mean_variance.py  run_momentum.py  run_score_top20.py  signal_diagnostics.py  train_valuation.py
src/value_portfolio/: __init__.py  agent.py  config.py  rebalancer.py
src/value_portfolio/backtest/: __init__.py  _stats.py  benchmark.py  cross_validation.py  driver.py  evaluation.py  report.py  series.py  statistics.py
src/value_portfolio/baselines/: __init__.py  buy_and_hold.py  equal_weight.py  mean_variance.py  momentum.py
src/value_portfolio/broker/: __init__.py  alpaca.py  base.py  exceptions.py  simulated.py  types.py
src/value_portfolio/data/: __init__.py  alpaca.py  base.py  exceptions.py  fundamentals.py  in_memory.py  loaders.py  scores.py  sharadar.py  types.py  universe.py
src/value_portfolio/learning/: __init__.py  _asof.py  cost_aware_allocator.py  diagnostics.py  features.py  score_proportional_top_k.py  score_top_k.py  selection.py  valuation.py
tests/: test_rebalancer.py
tests/backtest/: test_benchmark.py  test_cross_validation.py  test_driver.py  test_evaluation.py  test_report.py  test_series.py  test_statistics.py
tests/baselines/: test_buy_and_hold.py  test_equal_weight.py  test_mean_variance.py  test_momentum.py
tests/broker/: test_alpaca_smoke.py  test_simulated.py  test_types.py
tests/data/: test_alpaca_market_data_smoke.py  test_fundamentals.py  test_in_memory.py  test_loaders_smoke.py  test_scores.py  test_sharadar_loaders.py  test_types.py  test_universe.py
tests/learning/: test_cost_aware_allocator.py  test_diagnostics.py  test_features.py  test_score_proportional_top_k.py  test_score_top_k.py  test_valuation.py
