[project]
name = "value_portfolio"
version = "0.1.0"
description = "AI-managed equity portfolio system (TFG)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Pol Masip" }]
license = { text = "MIT" }
dependencies = [
    "alpaca-py>=0.30",
    "nasdaq-data-link>=1.0.4",
    "numpy>=1.26",
    # pandas + pyarrow back the Sharadar ingestors (data/scripts/fetch_sharadar_*.py):
    # the nasdaqdatalink client returns DataFrames natively, and the dataset volume
    # (~7M daily OHLCV rows, ~100-column fundamentals) is impractical to handle as
    # hand-rolled CSV. Parquet (pyarrow) is the primary on-disk format, with a CSV
    # mirror for portability. This is a deliberate, documented deviation from the
    # "no pandas yet" stance in the project guidelines §4.6, scoped to offline data ingestion.
    "pandas>=2.2",
    "pyarrow>=16",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "scipy>=1.11",
    "yfinance>=1.3.0",
]

[project.optional-dependencies]
# Phase-4 model pipeline (stage-1 valuation + rule-based stage-2 allocator).
# Optional so the simulation core stays installable without scikit-learn;
# `value_portfolio.learning` lazy-imports it (PEP 562).
learning = [
    "scikit-learn>=1.4",
]
# Static thesis figures (the project guidelines §4.6). Used only by scripts/plot_results.py;
# the simulation core never imports matplotlib.
viz = [
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "scipy-stubs>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/value_portfolio"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
# importorskip must run before the imports it guards (optional `learning` extra).
"tests/learning/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: integration tests against a live (paper) broker; require credentials",
]
addopts = "-ra --strict-markers"
filterwarnings = [
    # Emitted by alpaca-py's transitive use of `websockets.legacy`; not our code.
    "ignore::DeprecationWarning:websockets.legacy",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# pandas / pyarrow ship no (or partial) type information. They are used only in
# the offline Sharadar file loaders (`value_portfolio.data.sharadar`), which convert
# to typed domain objects at the boundary; treat the libraries as untyped so
# strict mode holds for the rest of `src/`.
[[tool.mypy.overrides]]
module = ["pandas.*", "pyarrow.*"]
ignore_missing_imports = true

# scikit-learn ships no usable type information; the learning package converts
# to typed domain objects (Decimal weights, ScoreRecord) at its boundaries.
[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true
